# ink-cpp

./: .gitignore  .gitmodules  11a_nested_choice.inkb  11e_complex_testing.inkb  14a_basic_logic.inkb  15i_multiline_alternatives.inkb  17a_functions_in_logic.inkb  2d_choice_multiple.inkb  CMakeLists.txt  inkb_format.md  main.cpp  main_compiler.cpp  main_runner.cpp  test.ink  test.inkb  test2.inkb  test3.inkb  tests.cpp
include/: ink_compiler.h  ink_cparse_ext.h  ink_enums.h  ink_utils.h  serialization.h  utils.h  uuid.h
include/expression_parser/: expression_parser.h  token.h
include/objects/: ink_object.h  ink_object_choice.h  ink_object_choicetextmix.h  ink_object_conditional.h  ink_object_divert.h  ink_object_globalvariable.h  ink_object_glue.h  ink_object_interpolation.h  ink_object_linebreak.h  ink_object_list.h  ink_object_logic.h  ink_object_sequence.h  ink_object_tag.h  ink_object_text.h
include/runtime/: ink_story.h  ink_story_data.h  ink_story_state.h  ink_story_structs.h  ink_story_tracking.h
include/types/: ink_list.h
src/: ink_compiler.cpp  ink_cparse_ext.cpp  ink_utils.cpp  serialization.cpp  uuid.cpp
src/expression_parser/: expression_parser.cpp  token.cpp
src/objects/: ink_object.cpp  ink_object_choice.cpp  ink_object_choicetextmix.cpp  ink_object_conditional.cpp  ink_object_divert.cpp  ink_object_globalvariable.cpp  ink_object_glue.cpp  ink_object_interpolation.cpp  ink_object_linebreak.cpp  ink_object_list.cpp  ink_object_logic.cpp  ink_object_sequence.cpp  ink_object_tag.cpp  ink_object_text.cpp
src/runtime/: ink_story.cpp  ink_story_data.cpp  ink_story_state.cpp  ink_story_structs.cpp  ink_story_tracking.cpp
src/types/: ink_list.cpp
tests/10_gathers/: 10b_multi_gather.ink
tests/11_nested_flow/: 11e_complex_nesting.ink
tests/12_tracking_weave/: 12a_choice_labels.ink  12b_weave_scope.ink  12c_weave_scope_2.ink  12d_weave_loops.ink
tests/13_global_variables/: 13a_variable_checks.ink  13b_divert_variables.ink  13c_printing_variables.ink  13d_string_logic.ink
tests/14_logic/: 14a_basic_logic.ink
tests/15_conditional_blocks/: 15a_basic_if.ink  15b_if_else.ink  15c_if_else_alt.ink  15d_if_elif_else.ink  15e_switch_statement.ink  15f_read_count_condition.ink  15g_conditional_with_content.ink  15h_conditional_with_options.ink  15i_multiline_alternatives.ink  15j_modified_shuffles.ink
tests/16_temporary_variables/: 16a_temporary_variables.ink  16b_knot_parameters.ink  16d_diverts_as_arguments.ink
tests/17_functions/: 17a_functions_in_logic.ink  17b_functions_in_interpolation.ink  17c_function_side_effects.ink  17d2_inline_function_call_without_return.ink  17d_inline_function_call.ink  17e_nested_function_calls.ink  17f_print_num.ink  17g_function_params_by_ref.ink  17h_complex_functions.ink
tests/18_constants/: 18a_string_constants.ink  18b_number_constants.ink  18c_constants_logic.ink
tests/19_tunnels/: 19a_basic_tunnels.ink  19b_nested_tunnels.ink  19c_tunnel_return_targets.ink  19d_advanced_tunnel_structure.ink  19e_inline_tunnels.ink
tests/1_content/: 1b_multiline_text.ink  1d_tags.ink
tests/20_threads/: 20a_basic_threads.ink  20b_nested_threads.ink  20c_complex_threads.ink  20d_thread_divert_parameters.ink
tests/21_lists/: 21_basic_lists.ink  21b_list_default_value.ink  21c_reusing_lists.ink  21d_list_namespaces.ink  21e_list_values.ink  21f_list_explicit_values.ink  21g_list_value_numbers.ink  21h_list_numbers_to_values.ink  21i_list_multiple_values.ink  21j_list_multiple_values_assignment.ink  21k_list_assign_empty.ink  21l_list_add_values_in_place.ink  21m_list_queries.ink  21n_list_contents_tests.ink  21o_nice_list_print.ink  21p_list_queries_2.ink  21q_refresh_list_type.ink  21r_advanced_list_operations.ink  21s_multi_list_lists.ink  21t_change_state_function.ink  21u_multi_list_queries.ink
tests/22_misc_bugs/: 22a_stitch_flow_stops.ink  22b_thread_divert_to_stitch.ink  22c_deeply_nested_function_content.ink  22d_interpolate_function_in_choice.ink  22e_same_choice_different_threads.ink  22f_variable_shadowing.ink  22g_basic_scope.ink  22h_consecutive_interpolates_and_logic.ink  22i_crime_scene_checks.ink  22j_knot_deeply_nested_labels.ink  22k_divert_from_deep_nest.ink  22l_choice_divert_scope.ink
tests/23_long_examples/: 23a_tower_of_hanoi.ink  23b_crime_scene.ink
tests/2_choices/: 2a_choice.inkb
tests/3_knots/: 3a_knot.ink
tests/4_diverts/: 4a_divert.ink  4b_glue.ink
tests/5_branching/: 5a_branch.ink
tests/6_stitches/: 6a_stitches.ink  6b_stitches_no_fallthrough.ink  6c_stitches_local_divert.ink
tests/7_varying/: 7a_fallback_choice.ink  7b_sticky_choice.ink  7c_conditional_choice.ink  7d_fallback_choice_2.ink
tests/8_variable_text/: 8a_sequence.ink  8b_cycle.ink  8c_onceonly.ink  8d_shuffle.ink  8e_onceonly_empty.ink  8f_cycle_nested.ink  8g_alternative_divert.ink  8h_alternative_in_choice.ink  8i_alternative_at_choice_start.ink  8j_whackamole.ink  8k_conditional_text.ink
tests/9_game_queries/: 9b_turns.ink  9c_turns_since.ink  9d_seed_random.ink
tests/ink-proof/: 10_temp_not_found.ink  22_quote_significance.ink  24_includes.ink  25_nested_includes.ink  3_tunnel_to_death.ink  5_const_variable.ink  98_knot_thread_interaction2.ink
tests/ink-proof/include/: include_2a.ink
tests/miscellaneous/: unicode_support.ink  variable_observation.ink
